Archive2/5b/eb4b5e24751648/output
main.cpp:12:22: error: type/value mismatch at argument 1 in template parameter list for 'template<class _Tp, class _Alloc> class std::vector'
     std::vector<Bling> list_blings;
                      ^
main.cpp:12:22: note:   expected a type, got 'Thing::Bling'
main.cpp:12:22: error: template argument 2 is invalid
main.cpp: In function 'int main()':
main.cpp:17:11: warning: unused variable 'thing' [-Wunused-variable]
     Thing thing;
           ^
